Add index.html styles.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="headerContent">
         <img class="prifilePic" src="./images/Dr.Namuene.jpg" alt="Profile picture">
         <div class="headerCard">
-          <section class="description">
+          <section class="headerDescription">
             <h1 class="aboutMe">About me</h1>
             <p class="mySummary">I am Dr. Kato Samuel Namuene. I have a PhD in Botany, specialty Forest Informatics. I hold 3 certifications in Relational Databases and 10 certifications in Statistical Analysis with R and 4 certifications in web development. I have been developing database packages from 2003 till date. </p>
             <div class="descriptionSocial">
@@ -252,7 +252,7 @@
 <footer>
   <div class="footerContent">
     <div class="footerCard">
-      <section class="description">
+      <section class="footerDescription">
         <h1 class="aboutMe">Contact me</h1>
        Please get in touch if you think my work could be mutually beneficial! <br><br> Bokoko Buea <br> South West Region, Cameroon
       <div class="contactMe">
